css/style.css
@import url('https://fonts.googleapis.com/css?family=Abel|Anton');
/* Main style sheet for index.html */
html, body {
    background-color: #f0f0f0;
    margin: 0;
    padding-top: 8px;
}


p {
    font-family: 'Abel', sans-serif;
    margin:0px;

}

#header p {
    padding-left: 10px;
    font-size: 32px;
    text-transform: lowercase;
}


#header a {
    text-decoration: none;
    text-transform: uppercase;
    color: #000;
}
h1, h2, h3, h4, h5{
    font-family: 'Anton', sans-serif;

}
h1 {
    font-size: 64px;
}
h2 {
    font-size: 48px;
}
h3 {
    font-size: 40px;
}

h4 {
    font-size: 32px;
}

h5 {
    font-size: 28px;
}

.red {
    background-color: #E6563B;
}

.orange {
    background-color: #EB9D3A;
}

.green {
    background-color: #7CB06C;
}

.teal {
    background-color: #00ABA9;
}

.white {
    color: #F0F0F0;
}

.bg-white {
    background-color: #f0f0f0;
}


.grey {
    color: #E6E6E6;
}

.logo {
    height: 105px;
    width: 105px;
}

.icon {
    width: 18px;
    height: 18px;
}

.circle-lg {
    width: 150px;
    height: 150px;
    border-radius: 75px;
    border: white 8px solid;
    font-size: 24px;
    color: white;
    font-family: 'Anton', sans-serif;
    text-transform: uppercase;
    text-align: center;
    padding-top: 48px;

}

.circle-sm {
    height: 18px;
    width: 18px;
    border-radius: 9px;
    display: inline-block;
    font-family: 'Anton', sans-serif;
    font-size: 9px;
    text-align: center;
    padding-top: 3px;
    float: right;

}


.header-container {
    position: absolute;
    height: 82px;
    background-color: #FFF;
    border-top: 22px solid #E6E6E6;
    width: 100%;
    z-index: 1;
}


#header {
    z-index: 1;
    position: relative;
}


.last-image img {
    width: 50px;
    height: 50px;

}

.

.feature-img {
    border: 20px solid  #e6e6e6;
}

.feature-project {
    display: inline-block;
    text-transform: uppercase;
    font-size: 10px;

}

.last-title {
    font-family: 'Anton', sans-serif;
    text-transform: uppercase;
    font-size: 18px;
}

